<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ConfirmationScreen"
    android:onClick="onClick">

    <ImageView
        android:id="@+id/ok_image_view"
        android:layout_width="135dp"
        android:layout_height="136dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/cv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label"
        android:layout_width="194dp"
        android:layout_height="70dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/touch_the_screen_to_return"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/out_of_hours"
        android:layout_width="125dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="164dp"
        android:background="@color/out_of_hours_background"
        android:visibility="gone"
        android:text="@string/out_of_hours"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goodbye_welcome"
        android:layout_width="154dp"
        android:layout_height="65dp"
        android:layout_marginStart="372dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_sorry_welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginStart="372dp"
        android:layout_marginTop="32dp"
        android:text="@string/default_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goodbye_welcome" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="372dp"
        android:layout_marginTop="20dp"
        android:text="@string/default_randstad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/not_ok_image_view"
        android:layout_width="150dp"
        android:layout_height="133dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:src="@drawable/cx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inss_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:layout_marginStart="372dp"
        android:text="@string/default_inss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextClock
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="300dp"
        android:format24Hour="dd/MM/yyyy HH:mm:ss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>