<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fireTopLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:keepScreenOn="true"
    android:orientation="horizontal">

    <com.sebastiendui.mobitimego.barcodeScanning.CameraSourcePreview

        android:id="@+id/camera_source_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    </com.sebastiendui.mobitimego.barcodeScanning.CameraSourcePreview>

    <FrameLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#00000000">


        <TextView
            android:id="@+id/scan_please_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="12dp"
            android:background="#00000000"
            android:text="@string/please_scan"
            android:textColor="@color/please_scan"
            android:textSize="24sp" />

        <Button
            android:id="@+id/scan_rfid_conv_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="24dp"
            android:text="@string/rfid_conversion"
            android:textSize="16sp" />

        <Button
            android:id="@+id/scan_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            android:textSize="16sp" />


    </FrameLayout>

</RelativeLayout>
